Colab kullanılarak oluşturuldu

--- a/FakeNewsDetection_Project.ipynb
+++ b/FakeNewsDetection_Project.ipynb
@@ -1096,6 +1096,22 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# Combining the fake and true news datasets\n",
+        "manual_testing_data = pd.concat([data_fake_manual_testing, data_true_manual_testing])\n",
+        "\n",
+        "# Saving the combined dataset to manual_testing.csv\n",
+        "manual_testing_data.to_csv('manual_testing.csv', index=False)"
+      ],
+      "metadata": {
+        "id": "PfKYCMWj7s7V"
+      },
+      "id": "PfKYCMWj7s7V",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "id": "03348793-bee8-4868-9a67-1de246b5d7c8",
       "metadata": {
